<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>org.robolectric</groupId>
  <artifactId>robolectric</artifactId>
  <version>2.3-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Robolectric</name>
  <description>An alternative Android testing framework.</description>
  <url>http://robolectric.org/</url>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit-dep</artifactId>
      <version>4.8.2</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <version>1.3</version>
    </dependency>

    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.7.2</version>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-analysis</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.0.3</version>
    </dependency>

    <dependency>
      <groupId>com.ximpleware</groupId>
      <artifactId>vtd-xml</artifactId>
      <version>2.11</version>
    </dependency>

    <dependency>
      <groupId>org.robolectric</groupId>
      <artifactId>android-all</artifactId>
      <version>4.3_r2-robolectric-0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.google.android.maps</groupId>
      <artifactId>maps</artifactId>
      <version>18_r3</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.google.android</groupId>
      <artifactId>support-v4</artifactId>
      <version>r7</version>
    </dependency>

    <dependency>
      <groupId>org.easytesting</groupId>
      <artifactId>fest-util</artifactId>
      <version>1.2.5</version>
    </dependency>

    <dependency>
      <groupId>org.easytesting</groupId>
      <artifactId>fest-reflect</artifactId>
      <version>1.4.1</version>
      <exclusions>
        <!-- To resolve conflicts between different transitive dependency to fest-util from from fest-assert-core and fest-reflect -->
        <exclusion>
          <groupId>org.easytesting</groupId>
          <artifactId>fest-util</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.easytesting</groupId>
      <artifactId>fest-assert-core</artifactId>
      <version>2.0M10</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>1.9.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.intellij</groupId>
      <artifactId>annotations</artifactId>
      <version>12.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-ant-tasks</artifactId>
      <version>2.1.3</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.1.2</version>
        <configuration/>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.13</version>
        <configuration>
          <excludes>
            <exclude>**/Test*.java</exclude>
          </excludes>
          <argLine>-Xms768m -Xmx768m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- required for testing robolectric-sqlite -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.4.1</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>tmp</directory>
              <includes>
                <include>*</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>ant-deps</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>clean-dependencies</id>
                <phase>package</phase>
                <goals>
                  <goal>run</goal>
                </goals>
                <configuration>
                  <target>
                    <delete dir="${project.basedir}/lib/main"/>
                    <mkdir dir="${project.basedir}/lib/main"/>
                  </target>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
                <id>copy-dependencies</id>
                <phase>package</phase>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.basedir}/lib/main</outputDirectory>
                  <overWriteReleases>false</overWriteReleases>
                  <overWriteSnapshots>false</overWriteSnapshots>
                  <overWriteIfNewer>true</overWriteIfNewer>
                  <excludeArtifactIds>android,maps,mockito-core</excludeArtifactIds>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <scm>
    <url>git@github.com:robolectric/robolectric.git</url>
    <connection>scm:git:git://github.com/robolectric/robolectric.git</connection>
    <developerConnection>scm:git:https://github.com/robolectric/robolectric.git</developerConnection>
  </scm>

  <ciManagement>
    <system>Hudson</system>
    <url>http://ci.robolectric.org/job/robolectric</url>
  </ciManagement>

  <developers>
    <developer>
      <id>xian</id>
      <name>Christian Williams</name>
      <email>xian@squareup.com</email>
      <organization>Square, Inc.</organization>
      <organizationUrl>http://corner.squareup.com/</organizationUrl>
      <roles>
        <role>Principal Developer</role>
      </roles>
      <timezone>PST/PDT</timezone>
    </developer>
    <developer>
      <id>tyler</id>
      <name>Tyler Schultz</name>
      <email>tyler@pivotallabs.com</email>
      <organization>Pivotal Labs</organization>
      <organizationUrl>http://pivotallabs.com/</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>PST/PDT</timezone>
    </developer>
    <developer>
      <id>phil</id>
      <name>Phil Goodwin</name>
      <email>phil@pivotallabs.com</email>
      <organization>Pivotal Labs</organization>
      <organizationUrl>http://pivotallabs.com/</organizationUrl>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>PST/PDT</timezone>
    </developer>
  </developers>

  <mailingLists>
    <mailingList>
      <name>User List</name>
      <post>robolectric@googlegroups.com</post>
      <archive>http://groups.google.com/group/robolectric</archive>
    </mailingList>
  </mailingLists>

  <licenses>
    <license>
      <name>MIT license</name>
      <comments>
        The MIT License

        Copyright (c) 2010 Xtreme Labs and Pivotal Labs

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.
      </comments>
    </license>
  </licenses>
</project>
